--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Blaka&family=Dongle&family=Inter&family=Kurale&family=Lobster&family=Montserrat:ital,wght@1,500&family=Permanent+Marker&family=Poppins:wght@300;400;500&family=Shippori+Antique&family=Supermercado+One&family=Yellowtail&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+::-webkit-scrollbar
+{
+    width: 5px;
+    
+}
+::-webkit-scrollbar-track
+{
+    border-radius: 1px;
+    box-shadow: inset 1px 0px 0px rgba(245, 243, 243, 0.947);
+
+}
+::-webkit-scrollbar-thumb
+{
+    border-radius: 5px;
+    background-color: #f4f1f192;
+}
+.active
+{
+  background-color: none;
+}
